chore: add Prettier and format the project
