# src/routes/orders.router.js
@@ -1,7 +1,7 @@
-import { Router } from 'express';
-import { getOrder, createOrder } from '../controllers/orders.controller.js';
+import { Router } from "express";
+import { getOrder, createOrder } from "../controllers/orders.controller.js";
 
 export const ordersRouter = Router();
 
-ordersRouter.get('/:orderId', getOrder);
-ordersRouter.post('/', createOrder);
+ordersRouter.get("/:orderId", getOrder);
+ordersRouter.post("/", createOrder);
