# src/routes/products.router.js
@@ -1,7 +1,10 @@
-import { Router } from 'express';
-import { listProducts, getProduct } from '../controllers/products.controller.js';
+import { Router } from "express";
+import {
+  listProducts,
+  getProduct,
+} from "../controllers/products.controller.js";
 
 export const productsRouter = Router();
 
-productsRouter.get('/', listProducts);
-productsRouter.get('/:productId', getProduct);
+productsRouter.get("/", listProducts);
+productsRouter.get("/:productId", getProduct);
